# GameOfLife

./: .gitignore  CGameOfLife.py  CNAME  DESIGN.md  GameOfLife.cell.html  GameOfLife.html  GameOfLife.patterns.html  GameOfLife.py  GameOfLife.tests.html  GameOfLife.tests.test_patterns.html  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  pyproject.toml  setup.py
GameOfLife/: __init__.py  cell.py  console.py  patterns.py  world.py
GameOfLife/console/: __init__.py  asciimatics_world.py  curses_world.py  pygame_world.py  worlds.py
GameOfLife/patterns/: __init__.py
GameOfLife/patterns/data/: acorn.life  beacon.life  beehive.life  block.life  boat.life  diehard.life  glider.life  gosper-glider-gun.life  infinite1.life  infinite2.life  infinite3.life  lightweight-spaceship.life  loaf.life  pentadecathlon.life  pulsar.life  r-pentomino.life  toad.life
GameOfLife/tests/: __init__.py  test_cell.py  test_patterns.py  test_world.py
contrib/: CGameOfLife.py  NCGameOfLife.py  NPGameOfLife.py  PGameOfLife.py
docs/: GameOfLife.tests.test_cell.html  GameOfLife.tests.test_world.html  Makefile
tests/: __init__.py  test_cell.py  test_world.py
